force-app/main/default/objects/copado__Persona_Definition__c/copado__Persona_Definition__c.object-meta.xml
<CustomObject>
    <label>Persona</label>
    <nameField>
        <label>Persona Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Personas</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>