force-app/main/default/objects/copado__Persona_Definition__c/fields/copado__Config_JSON__c.field-meta.xml
<CustomField>
    <fullName>copado__Config_JSON__c</fullName>
    <label>Config JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>