force-app/main/default/objects/copado__Persona_Definition__c/fields/copado__Description__c.field-meta.xml
<CustomField>
    <fullName>copado__Description__c</fullName>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>