force-app/main/default/objects/copado__Persona_Definition__c/fields/copado__Is_Standard__c.field-meta.xml
<CustomField>
    <fullName>copado__Is_Standard__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Standard</label>
    <type>Checkbox</type>
</CustomField>